--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nordicsemi.IntensityLightControl"
+    package="com.nordicsemi.ImageTransferDemo"
     android:versionCode="43"
     android:versionName="2.0" >
 
@@ -30,7 +30,7 @@
         android:theme="@android:style/Theme.Holo.Light"
         android:icon="@drawable/icon2">
         <activity
-            android:name=".MainActivity"
+            android:name="com.nordicsemi.ImageTransferDemo.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden"
             android:configChanges="keyboardHidden|orientation|screenSize">
@@ -40,9 +40,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceListActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name="com.nordicsemi.ImageTransferDemo.DeviceListActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"/>
 
-        <service android:enabled="true" android:name=".LedButtonService" />
+        <service android:enabled="true" android:name="com.nordicsemi.ImageTransferDemo.ImageTransferService" />
     </application>
 
 </manifest>
