--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
     <application 
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light"
-        android:icon="@drawable/icon2">
+        android:icon="@drawable/icon_cam">
         <activity
             android:name="com.nordicsemi.ImageTransferDemo.MainActivity"
             android:label="@string/app_name"
