--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:3.2.0'
     }
 }
 apply plugin: 'android'
 android {
     compileSdkVersion 21
-
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -34,6 +33,12 @@ android {
         // by a similar customization.
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
+    }
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 21
+    }
+    productFlavors {
     }
 }
 repositories {
