--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <application 
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light"
-        android:icon="@drawable/icon_cam">
+        android:icon="@mipmap/ic_launcher">
         <activity
             android:name="com.nordicsemi.ImageTransferDemo.MainActivity"
             android:label="@string/app_name"
